samples/_failures_safe/1761310896_a114ac_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_e7b37cba.c: In function ‘main’:
./samples/SAFE/__tmp_e7b37cba.c:128:16: error: missing terminating " character
  128 |         printf("3. Exit
      |                ^~~~~~~~
./samples/SAFE/__tmp_e7b37cba.c:128:9: error: expected expression at end of input
  128 |         printf("3. Exit
      |         ^~~~~~
./samples/SAFE/__tmp_e7b37cba.c:128:9: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_e7b37cba.c:128:9: error: expected declaration or statement at end of input
